[package]
name = "decrypto-web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_millis = "0.1.1"
tokio = { version = "1.47.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
